# eeepc-wmi-brightness

./: Makefile.am  configure.ac  eeepc-wmi-brightness.c
