#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([eeepc-wmi-brightness], [0.1], [Shih-Yuan Lee (FourDollars) <sylee@canonical.com>])
AC_CONFIG_SRCDIR([eeepc-wmi-brightness.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign dist-xz no-dist-gzip silent-rules])
AM_SILENT_RULES([yes])
AM_MAINTAINER_MODE

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
